<resources>
    <string name="app_name">App Analyzer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="current_version">Current Version: </string>
    <string name="search">Search</string>
    <string name="search_on_GP">Search on Google Play</string>
    <string name="pref_white_list_label">Source</string>
    <string name="trust_level_label">Offline Trust: </string>
    <string name="overall_trust_level_label">"Overall Trust: "</string>
    <string name="online_trust_level_label">"Online Trust: "</string>

    <string name="first_tab">User\'s Data</string>
    <string name="second_tab" translatable="false">Google Play </string>
    <string name="third_tab">Permissions</string>


    <string name="detailed_app_name" translatable="false">Telegram</string>
    <string name="detailed_app_version_label">version: </string>
    <string name="detailed_app_version" translatable="false">1.54</string>
    <string name="detailed_popularity_level">Popularity Level: </string>
    <string name="high">high</string>
    <string name="middle">middle</string>
    <string name="low">low</string>
    <string name="detailed_app_origin_source">Source of Origin: </string>
    <string name="gp" translatable="false">GP</string>
    <string name="amazon_store" translatable="false">Amazon Store</string>
    <string name="standard_apps">Standard Apps</string>
    <string name="undefined">Undefined</string>
    <string name="internet_access">Internet Access: </string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="detailed_app_last_run_time">Last Run Time: </string>
    <string name="detailed_app_last_updated_time">Last Updated Time: </string>
    <string name="last_run_time">Last Run Time: </string>
    <string name="last_update_time">Last Updated Time: </string>
    <string name="first_install_time">First Install Time: </string>
    <string name="dangerous_permissions">Dangerous Permissions: </string>
    <string name="permission_groups">Permission Groups: </string>


    <string name="gp_updated_html" translatable="false">Updated</string>
    <string name="gp_installs_html" translatable="false">Installs</string>
    <string name="gp_policy_html" translatable="false">Policy</string>
    <string name="gp_additional_info" translatable="false">div:contains(Additional Information)</string>
    <string name="gp_link" translatable="false">https://play.google.com/store/apps/details?id=%1$s&amp;hl=en </string>
    <string name="gp_link_prefix" translatable="false">&amp;hl=en</string>

    <string name="gp_rating">Rating: </string>
    <string name="gp_people">People: </string>
    <string name="gp_installs">Installs: </string>
    <string name="gp_update_time">Updated: </string>
    <string name="gp_category">Category: </string>

    <string name="app_widget_list">App Widget List</string>


    <string name="pref_white_list_key" translatable="false">whitelist</string>


    <string name="pref_white_list_value_google" translatable="false">google</string>
    <string name="pref_white_list_value_cvedetails" translatable="false">cvedetails</string>
    <string name="pref_white_list_value_checkpoint" translatable="false">checkpoint</string>
    <string name="pref_white_list_value_helpnetsecurity" translatable="false">helpnetsecurity</string>
    <string name="item_position">position</string>
    <string name="item_logo">logo</string>
    <string name="no_available_data">NO available data</string>
    <string name="system_app">System Application</string>
    <string name="source_type">appSourceType:</string>
    <string name="unknown_source">Unknown Source</string>
    <string name="google_play" translatable="false">Google Play</string>
    <string name="vending_package" translatable="false">com.android.vending</string>
    <string name="venezia_package" translatable="false">com.amazon.venezia</string>
    <string name="date_format" translatable="false">dd.MM.yyyy \'at\' HH:mm:ss</string>
    <string name="perm_group_amount">permission_groups_amount</string>
    <string name="application_name">Application Name</string>

    <string name="overview">Overview</string>
    <string name="overall_statistics">Overall Statistics</string>
    <string name="applications_installed_amount">Applications Installed: </string>
    <string name="apps_with_high_score">More than 80/100 score: </string>
    <string name="apps_with_middle_score">Between 60 and 80 score: </string>
    <string name="apps_with_low_score">Less than 60 score: </string>
    <string name="default_value" translatable="false">0</string>

    <string name="phone">Phone</string>
    <string name="applications">Applications</string>

</resources>
