<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/dangerous_permissions_label"
            style="@style/AppDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:nextFocusForward="@id/dangerous_permissions"
            android:layout_marginTop="16dp"
            android:text="@string/dangerous_permissions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dangerous_permissions"
            style="@style/AppDescription"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:nextFocusForward="@id/permission_groups_label"
            android:layout_marginTop="16dp"
            android:text="@string/undefined"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/dangerous_permissions_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/permission_groups_label"
            style="@style/AppDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:nextFocusForward="@id/permission_groups"
            android:layout_marginTop="8dp"
            android:text="@string/permission_groups"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dangerous_permissions" />

        <TextView
            android:id="@+id/permission_groups"
            style="@style/AppDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:nextFocusForward="@id/permission_groups_amount"
            android:layout_marginTop="12dp"
            android:text="@string/undefined"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permission_groups_label" />

        <TextView
            android:id="@+id/permission_groups_amount"
            style="@style/AppDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/undefined"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/permission_groups_label"
            app:layout_constraintTop_toBottomOf="@+id/dangerous_permissions"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>